# updater

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.win  DownloadInfo.qml  ExecInExplorer.cpp  GPL.txt  News.qml  NewsCard.qml  README  README.md  Settings.qml  Splash.qml  Unvanquished.xml  UpdateFailed.qml  ariadownloader.cpp  ariadownloader.h  azure-pipelines.yml  currentversionfetcher.cpp  currentversionfetcher.h  custom-en.lng  deployment.md  disable-statx.patch  downloadtimecalculator.cpp  downloadtimecalculator.h  downloadworker.cpp  downloadworker.h  gamelauncher.cpp  gamelauncher.h  linux.cpp  mac-build-aria.sh  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  maplist  (+25 more)
.github/workflows/: codeql.yml
images/: LICENSE
misc/: unvanquished.desktop
quazip/: CMakeLists.txt  quazip_global.h
resources/: Info.plist  Unvanquished.icns  disconnected_posts.json  net.unvanquished.Unvanquished.desktop  net.unvanquished.UnvanquishedProtocolHandler.desktop  unvanquished.desktop  windows_manifest.xml
tools/: md5Verification.sh
tools/md5sum/: README
